Navbar z-index fixed

--- a/src/Pages/Navbar/navbar.css
+++ b/src/Pages/Navbar/navbar.css
@@ -6,6 +6,7 @@
     position: sticky;
     top: 0;
     box-shadow: 0px 1px 10px #999;
+    z-index: 1;
 
     @media screen and (max-width: 768px) {
         height: 50px;
